setting the new source directory variable on the command line: make
ASTERISK_SRC_DIRECTORY or by modifying the variable in the Makefile.

Added a compiler flag, VECTORS, that indicates gcc extensions for vector
operations are to be used for mixing frames. Modify the makefile to enable this
feature. 

Remove video features from conference module because we're only interested in
voice and video degrades voice performance.

Changed the code to use the c language idiom for conditionals testing pointers.

Changed the code to use the asterisk memory allocation routines rather than the
c library routines directly.

Reuse speaker and listener mix buffers. This should be more efficient than
allocating/freeing them every time voice frames are mixed.

Remove unnecessary calls to ast_frdup from queue frame for speaker and queue
frame for speaker routines.

Remove unnecessary calls to ast_frdup from frame mixing routines.

Remove dtmf forwarding as this feature was required for video and video is no
longer supported.

Reuse asterisk frames used for speaker and listener mix buffers.

Reuse conference frames used for speaker and listener mix buffers.

Typedef conference control blocks, conference frame header and soundq header.

Remove unused silence detection defines and cleanup member control block
silence detection definitions.

Remove unnecessary last frame cache code from conference thread's get incoming
frame routine.

Added another library for silence detection. The new library is enabled by
setting the silence detection compiler flag, SILDET, to one. The new library is
the default setting and the old library is deprecated.

Added a scoreboard for member speaking/silent state changes.  The scoreboard is
enabled by setting a two compiler flags: SPEAKER_SCOREBOARD and
CACHE_CONTROL_BLOCKS.  Member speaking/silent state change events are not
queued to the manager when the scoreboard is enabled. By default,
speaking/silent events are enabled and the scoreboard is disabled.