@@ -109,6 +109,7 @@ CPPFLAGS += -DASTERISK=$(ASTERISK)
 CPPFLAGS += -DCHANNEL_TABLE_SIZE=$(CHANNEL_TABLE_SIZE)
 CPPFLAGS += -DCONFERENCE_TABLE_SIZE=$(CONFERENCE_TABLE_SIZE)
 CPPFLAGS += -DONEMIXTHREAD
+CPPFLAGS += -DCACHE_CONF_FRAMES
 
 #
 #
