@@ -37,6 +37,11 @@ struct conf_frame
 	// array of converted versions for listeners
 	struct ast_frame* converted[ AC_SUPPORTED_FORMATS ] ;
 
+#if	defined(CACHE_CONF_FRAMES) && defined(ONEMIXTHREAD)
+	// pointer to next frame in cache
+	AST_LIST_ENTRY(conf_frame) frame_list ;
+#endif
+
 	// pointer to the frame's owner
 	ast_conf_member* member ; // who sent this frame
 
